<resources>
    <string name="app_name">SHClient</string>
    <!--Navigation Bottom button-->
    <string name="tcp">TCP通信</string>
    <string name="udp">UDP通信</string>
    <string name="ble">蓝牙通信</string>
    <string name="mqtt">MQTT通信</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_message">消息显示：</string>
    <string name="mock_ip">"192.168.124.4"</string>
    <string name="mock_port">"8900"</string>

    <string name="ip_adress">IP：</string>
    <string name="port">广播发送端口：</string>
    <string name="send_message">发送消息：</string>


    <string name="server_ip_adress">服务器IP：</string>
    <string name="server_port">服务器端口：</string>

    <string name="start_server">启动服务</string>
    <string name="send_data">发送数据</string>
    <string name="stop_server">停止服务</string>

    <string name="start_broadcast">打开接收</string>
    <string name="send_broadcast">广播发送</string>
    <string name="stop_broadcast">停止接收</string>

    <string name="connect_mqtt">连接MQTT</string>
    <string name="publish_mqtt">发布topic</string>
    <string name="subscribe_mqtt">订阅topic</string>

    <string name="scan_ble">扫描蓝牙设备</string>
    <string name="stop_scan_ble">停止扫描</string>

    <string name="connect_ble">连接蓝牙</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
</resources>